Cleaning up controller logging